Small text tweaks

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@ title: Blog
 						<div class="12u"><span class="image fit"><img src="images/kickoffberlin.jpg" alt="" /></span></div>
 					</div>
 				</div>
+                                <h5>February 16, 2016</h5>
 				<p><span class="image left"><img src="images/pic06.jpg" alt="" /></span>Here is a brief update from the Vaani team meetup in Berlin last week around prototype-scoping and planning, following the gate 0 go-ahead.
 
 </p>
