--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Vaani brings a voice to IoT</h2>
-                                                                <p>With Vaani you will be able to control the IoT<br />
-                                                                through the power of voice.</p>
+                                                                <p>With Vaani you will be able to control IoT through<br />
+                                                                the power of voice.</p>
 							</div>
 						</section>
 					</section>
@@ -52,7 +52,7 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Sounds interesting?</h2>
+								<h2>Sound interesting?</h2>
 							</header>
                                                         <ul class="actions vertical">
                                                                 <li><a href="info.html" class="button fit">Learn More</a></li>
