Added blog post: 'Project Vaani Moves to Prototyping Phase'

--- a/blog.html
+++ b/blog.html
@@ -44,4 +44,50 @@ title: Blog
                                <p>While we are focused in earnest in getting the prototype built now, we will build the stack of differentiation ideas in parallel. Please continue sending feedback and ideas. </p>
 			</section>
 			<section>
+				<h4>Project Vaani Moves to Prototyping Phase</h4>
+				<div class="box alt">
+					<div class="row uniform 50%">
+						<div class="12u"><span class="image fit"><img src="images/shoppinglist.jpeg" alt="" /></span></div>
+					</div>
+				</div>
+                                <h5>August 17, 2016</h5>
+				<p><span class="image left"><img src="images/groceries.jpeg" alt="" /></span>As you may already be aware, Project Vaani aims to bring a voice interface to the connected devices using open, Mozilla-backed technologies that do not tie you down to the silo’ed services like some existing offerings do.
+
+</p>
+                                <h5>Our Approach: Products Before Platform</h5>
+                                <p>Before we decide to build a platform, or create a set of technologies to enable this, our approach is to first focus on releasing a narrowly defined product that solves a specific consumer problem(s). So far, we have conducted several market surveys and user studies with initial concepts. During the user studies and surveys, we consistently heard one common problem: keeping track of things. One such verbatim quote is here:
+                                <blockquote>"...The stress of keeping track of a hundred things to do – errands like groceries and household items… I mentally note those when I am in the middle of something at home...<br/>But when I am at the store, I am scratching my head about what all I needed to buy… I forget buying some items… When I need them next, the cycle continues”
+                                </blockquote>
+                                We broke down this user pain point into a narrow goal for us below:
+                                <blockquote style="text-align: center;"><p><strong>Goal:</strong> Remove friction from creating lists<br/>(and provide reminders when it matters)
+                                </p></blockquote>
+                                And formed a following hypothesis based on this:
+                                </p>
+                                <h6>We believe that...</h6>
+                                <ul>
+                                    <li>(target audience) smartphone-equipped grocery decision makers (Women between 25 and 40 years old, living in North America urban areas, who work full time and run a 3 to 5 person household)</li>
+                                    <li>(current solution) who are currently making shopping lists with pen and paper or smartphone application</li>
+                                    <li>(problem) currently find it cumbersome to create and use these lists when shopping</li>
+                                </ul>
+                                <h6>We can determine a solution and benefit...</h6>
+                                <ul>
+                                     <li>by building a device that takes voice commands and creates lists with a note-taking app</li>
+                                     <li>and providing a faster and easier way to create shopping lists than what they are currently using.</li>
+                                </ul>
+                                <h6>We will know this to be true when we see that a majority of participants who use the prototype for (..x.. days)...</h6>
+                                <ul>
+                                    <li>who prefer this device to their current solution, and</li>
+                                    <li>who believe this device provides a faster and easier way of creating lists.</li>
+                                </ul>
+                                <p>We are calling this Minimum Viable Product (MVP) "Vaani Local" now as it focuses on local shopping.</p>
+				<div class="box alt">
+					<div class="row uniform 50%">
+						<div class="12u"><span class="image fit"><img src="images/supermarket.jpeg" alt="" /><figcaption>pixabay photo by <a href="https://pixabay.com/en/supermarket-market-grocery-store-732278/">larsen9236</a> shared under a Creative Commons (CC0) license</figcaption></span></div>
+					</div>
+				</div>
+                                <p>There are a couple assumptions here that we are validating with user and market surveys. We also are building a quick hardware prototype and plan to reach out to “Mozilla friends and family” for testing this. Each user study participant would place a small hardware unit in their house (e.g. on kitchen counters) and use voice to add items to a shopping list via voice. These will be converted to text line items in their smartphone app automatically; We are starting with an Evernote app in the prototype. We will review the results during the month of August and analyze the learnings to fine tune the MVP further. This will help us validate the problem space, target user demographic, use cases and the right approach to solve it.</p>
+                                <p>That’s all for now. We will keep our community posted with regular updates.</p>
+                                <p>Please continue following us on our <a href="https://wiki.mozilla.org/Connected_Devices/Projects/Vaani">wiki</a> for further updates.</p>
+			</section>
+			<section>
 				<hr />
